--- a/client-app/pom.xml
+++ b/client-app/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>de.schulzebilk.zkp</groupId>
             <artifactId>poc-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
