--- a/pdp-service/pom.xml
+++ b/pdp-service/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>de.schulzebilk.zkp</groupId>
             <artifactId>poc-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
