[resource-service] setup Person and Book Entity

--- a/resource-service/src/main/resources/application.yaml
+++ b/resource-service/src/main/resources/application.yaml
@@ -2,3 +2,17 @@ server:
   port: 8083
   servlet:
     context-path: /resource
+
+spring:
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: none
+  sql:
+    init:
+      mode: always
