--- a/poc-core/pom.xml
+++ b/poc-core/pom.xml
@@ -9,5 +9,13 @@
 
     <artifactId>poc-core</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.2.8</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
