--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <configuration>
+                        <skipITs>true</skipITs>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
